--- a/src/assets/styles/main.scss
+++ b/src/assets/styles/main.scss
@@ -14,6 +14,12 @@
     url("../../assets/fonts/AvianoSerif.otf") format("opentype");
 }
 
+@font-face {
+  font-family: "Montserrat";
+  src: local("Montserrat"),
+    url("../../assets/fonts/QuattrocentoSans-Regular.ttf") format("opentype");
+}
+
 body {
   font-family: "Montserrat" !important;
 }
