--- a/src/assets/styles/main.scss
+++ b/src/assets/styles/main.scss
@@ -94,7 +94,7 @@ body {
   font-family: "Aviano Serif";
   font-style: normal;
   font-weight: 400;
-  font-size: 48px;
+  font-size: 42px;
   line-height: 113.5%;
   background: linear-gradient(
     209.53deg,
@@ -108,6 +108,14 @@ body {
   text-fill-color: transparent;
 }
 
+.home-container {
+  display: grid;
+  grid-template-columns: 55% auto;
+
+  &__content {
+    width: 90%;
+  }
+}
 .bg-starfort-launchpad {
   background-image: url(../img/bg-starfort-launchpad.svg);
   position: absolute;
@@ -208,13 +216,17 @@ body {
       display: flex;
       justify-content: center;
       align-items: center;
+      position: unset;
+      width: 100%;
+      max-width: 100%;
 
-      img {
-        display: none;
-      }
+      // img {
+      //   display: none;
+      // }
     }
 
     &__content {
+      width: 100%;
       h1 {
         text-align: center;
       }
@@ -383,20 +395,16 @@ body {
     line-height: 24px;
   }
 
-  .home-container {
-    .img {
-      img {
-        display: none;
-      }
-    }
-  }
-
   .starfort-launchpad-container {
     &__content {
       &--button {
         margin-left: 0;
         display: flex;
         flex-direction: column;
+      }
+
+      .img-content {
+        width: 100%;
       }
     }
   }
