--- a/src/assets/styles/main.scss
+++ b/src/assets/styles/main.scss
@@ -16,7 +16,6 @@
 
 @font-face {
   font-family: "Montserrat";
-  font-weight: 400;
   src: local("Montserrat"),
     url("../../assets/fonts/QuattrocentoSans-Regular.ttf") format("opentype");
 }
@@ -26,14 +25,9 @@
   src: local("Montserrat"),
     url("../../assets/fonts/QuattrocentoSans-Bold.ttf") format("opentype");
 }
-@font-face {
-  font-family: "Montserrat";
-  src: local("Montserrat"),
-    url("../../assets/fonts/QuattrocentoSans-Italic.ttf") format("opentype");
-}
 
 body {
-  font-family: "Montserrat" !important;
+  font-family: "Montserrat", "Montserrat", "Montserrat";
   background: #f8fbfd;
 }
 .glow-on-hover {
