--- a/src/assets/styles/main.scss
+++ b/src/assets/styles/main.scss
@@ -17,13 +17,7 @@
 @font-face {
   font-family: "Montserrat";
   src: local("Montserrat"),
-    url("../../assets/fonts/QuattrocentoSans-Regular.ttf") format("opentype");
-}
-@font-face {
-  font-family: "Montserrat";
-  font-weight: 700;
-  src: local("Montserrat"),
-    url("../../assets/fonts/QuattrocentoSans-Bold.ttf") format("opentype");
+    url("../../assets/fonts/QuattrocentoSans-Regular.ttf") format("truetype");
 }
 
 body {
