--- a/src/assets/styles/main.scss
+++ b/src/assets/styles/main.scss
@@ -14,15 +14,15 @@
     url("../../assets/fonts/AvianoSerif.otf") format("opentype");
 }
 
-// @font-face {
-//   font-family: "Montserrat";
-//   src: local("Montserrat"),
-//     url("../../assets/fonts/QuattrocentoSans-Regular.ttf") format("truetype");
-// }
+@font-face {
+  font-family: "Montserrat";
+  src: local("Montserrat"),
+    url("../../assets/fonts/Montserrat-Regular.ttf") format("truetype");
+}
 
 body {
   // font-family: "Quattrocento Sans", sans-serif;
-  font-family: "Montserrat", "Montserrat", "Montserrat";
+  font-family: "Montserrat";
   background: #f8fbfd;
 }
 .glow-on-hover {
